2005-10-02  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsforstep.ave: Added possibility to
	pass timestep as script parameter
	* dcwatdes.model.epanet.results.loadarcview.ave: Pass nil instead of
	table list

2005-09-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added new analysis section with information 
	how to import the results to R
	
2005-09-27  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.mergemodel.ave: Delete shapes from existing model
	model shapefiles if no records are found for this zone any more. 
	* doc/en/dcwaterdesign.xml:
	* dcwatdes.project.extractmodel.ave: Allowed to specify the folder name 
	to which the models will be extracted

2005-09-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.project.splitmodel.ave: Delete shapes from
	existing zone shapefiles if no records are found for this zone any more;
	fixes bug #1296212

2005-09-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.splitmodel.ave: Fixed the splitting function

2005-09-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Updated with latest information.
	* dcwatdes.project.mergemodel.ave:
	* dcwatdes.project.splitmodel.ave: clearing the selection first
	* dcwatdes.project.extractmodel.ave: Allow to select models to extract
	* dcwatdes.table.calculatebitcode.ave: Bytecode numbering starts at 1
	instead of 0 now.
	
2005-09-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdesextension.make.ave: Version number is 2.12.2+cvs now
	* dcwates.project.splitmodel.ave: Added option to create views

2005-09-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml:
	* dcwatdes.model.epanet.loadresultsforstep.ave:
	* dcwatdes.project.extractmodel.ave:
	* dcwatdes.project.splitmodel.ave: Now calling .updateDefBitmap after
	each setDefinition() call. Fixes a critical bug (shapefile changes).